--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const metaTags = generateMetaTags({
   keywords: "jasa laser cutting jakarta, laser cutting bogor, laser cutting depok, laser cutting tangerang, laser cutting bekasi, cnc router jabodetabek, laser fiber cutting, potong akrilik jakarta, potong kayu bogor, cutting metal depok, laser engraving tangerang, galvo engraving bekasi",
   url: "/",
   type: "website",
-  image: "hero-laser.webp",
+  image: "logo.webp",
   publishedTime: "2024-01-01T00:00:00Z",
   modifiedTime: "2024-01-01T00:00:00Z",
   author: SITE_CONFIG.author
